syntax = "proto3";
package service;

message ClientInfo {
  string client_id = 1;
}